# ACKEMANN_DRL_vCAN

./: .gitignore  temp.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/ackermann_car_description/: CMakeLists.txt
src/ackermann_car_description/config/: controllers.yaml
src/ackermann_car_description/launch/: stage1_ackermann.launch.py  stage2_5_ackermann.launch.py  stage2_ackermann.launch.py  stage3_ackermann.launch.py  stage4_ackermann.launch.py  stage5_ackermann.launch.py  stage5_up_with_car.launch.py  test_car.launch.py  test_car.rviz
src/ackermann_car_description/rviz/: stage5_up.rviz
src/turtlebot3_gazebo/: CMakeLists.txt
src/turtlebot3_gazebo/launch/: turtlebot3_drl_stage1.launch.py  turtlebot3_drl_stage5.launch.py  turtlebot3_drl_stage5_up.launch.py  turtlebot3_drl_stage9.launch.py
src/turtlebot3_gazebo/models/stage5_up_ground/: model.config  model.sdf
src/turtlebot3_gazebo/models/stage5_up_ground/materials/scripts/: ground.material
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage1/: waffle.model
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage2_5/: waffle.model
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage3/: waffle.model
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage4/: waffle.model
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage5/: waffle.model
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage5/materials/scripts/: ground.material
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage5_up/: waffle.model
src/turtlebot3_gazebo/worlds/turtlebot3_drl_stage9/: waffle.model
(+260 files in other folders)
